saves/test/demo_full_20240802_193545/gates100/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp gates100_tb.v gates100.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
gates100_tb.v:74: $finish called at 10 (1ns)

iverilog cmd 2 error:

